# DJANGO-cmpnyinfo

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  README.md  a.py  db.sqlite3  docker-compose.yml  manage.py  pyproject.toml  pytest.ini  requirements.txt
API/: urls.py  views.py
API/api_local/: API_KEYS.py  cmpny_data.py  create_basic_info.py  create_bf_for_analysis.py  create_name_code.py  create_stock_prices.py  custom_exceptions.py  initialize_data.py  lib_one.py  manipulate_basic_info.py  visualize.py
API/api_local/Data/: basic_info.csv  basic_info_for_analysis.csv  name_code.pkl  삼성전자_basic_info.csv  삼성전자_basic_info_for_analysis.csv
API/api_local/Data/Stocks/: CJ제일제당_stock.csv  DB손해보험_stock.csv  GS_stock.csv  HD한국조선해양_stock.csv  HD현대_stock.csv  HD현대일렉트릭_stock.csv  HD현대중공업_stock.csv  HMM_stock.csv  KB금융_stock.csv  KT&G_stock.csv  KT_stock.csv  LG_stock.csv  LG디스플레이_stock.csv  LG생활건강_stock.csv  LG에너지솔루션_stock.csv  LG유플러스_stock.csv  LG이노텍_stock.csv  LG전자_stock.csv  LG화학_stock.csv  NAVER_stock.csv  NH투자증권_stock.csv  POSCO홀딩스_stock.csv  S-Oil_stock.csv  SK_stock.csv  SK바이오사이언스_stock.csv  SK바이오팜_stock.csv  (+75 more)
API/api_local/tests/: test_local_api.py
UI/: forms.py  urls.py  views.py
UI/templates/: about.html  cmpny.html  error_page.html  home.html  navbar.html  not_found.html  search-header.html  sign_in.html  sign_up.html
cmpnyinfo/: asgi.py  settings.py  urls.py  wsgi.py
nginx/: Dockerfile  default.conf
static/UI/css/: about.css  cmpny_style.css  globals.css  nav_style.css  search_style.css  style.css  styleguide.css
tests/: test_api.py
